--- a/src/components/friends/friendlist.css
+++ b/src/components/friends/friendlist.css
@@ -3,12 +3,12 @@
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    width: 150px;
+    width: 120px;
     height: 220px;
     box-shadow: 0px 5px 17px rgba(0, 0, 0, 0.75);
     border-radius: 5px;
+    margin-right: 10px;
     transition: transform 100ms ease-in;
     cursor: pointer;
-    display: flex;
-    
+    flex:1;
 }
