--- a/src/components/friends/friendrequest.css
+++ b/src/components/friends/friendrequest.css
@@ -1,5 +1,8 @@
 .friendrequest{
+    margin-top: 20px;
     display: flex;
-    float: right;
+    margin-left: 400px;
     margin-right: 15px;
+    flex: 20% 20% 20% 20%;
+    width: 60%;
 }
