--- a/src/components/homepage/homecenter/feed.css
+++ b/src/components/homepage/homecenter/feed.css
@@ -1,6 +1,6 @@
 .feed{
-    width: 70%;
-    margin-top: 15px;
+    width: 100%;
+    margin-top: 0;
     border-radius: 15px;
     background-color: white;
     box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75); 
